--- a/css/global.css
+++ b/css/global.css
@@ -27,7 +27,7 @@ a:hover {
 .main::before, 
 .main::after {
     content: '';
-    background-image: url(/Assets/bakcground.svg);
+    background-image: url(Assets/bakcground.svg);
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
