--- a/css/experience.css
+++ b/css/experience.css
@@ -19,6 +19,6 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url(Assets/icons/calendar.svg);
+    background-image: url('Assets/icons/calendar.svg');
     margin-right: .5rem;
 }
