--- a/css/acordeon.css
+++ b/css/acordeon.css
@@ -41,7 +41,7 @@
     height: 1.5rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('Assets/icons/arrow-top.svg');
+    background-image: url(Assets/icons/arrow-top.svg');
     transition: .25s;
 }
 
