--- a/css/languages.css
+++ b/css/languages.css
@@ -23,6 +23,6 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url(Assets/icons/check.svg);
+    background-image: url(/Assets/icons/check.svg);
     margin-right: .5rem;
 }
