--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -31,7 +31,7 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('Assets/icons/github-icon.svg');
+    background-image: url(/Assets/icons/github-icon.svg);
     margin-right: .5rem;
 }
 
